[project]
name = "da2404"
version = "0.1.0"
description = "DA Form 2404 Generation via ReportLab"
authors = [
    {name = "WillCallahan",email = "willcallahan94@att.net"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "reportlab (>=4.3.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[tool.poetry.scripts]
generate = "da2404.generate:write_to_file"